--- a/#Source/scss/style.scss
+++ b/#Source/scss/style.scss
@@ -1,9 +1,21 @@
-@import 'null.scss';
+@import "null.scss";
 
+$abs: absolute;
 $p:20px;
 $h:hidden;
 $fz: 50px;
 $c_1: #2e3629;
+$hm: 800px;
+ $c_2:#2E2300;
+ $c_3:#6E6702;
+ $c_4:#C05805;
+ $c_5:#DB9501;
+@mixin bottom($a){
+	margin: 860px 0px 0px 0px
+}
+%standbord {
+	border: 4px solid #000;
+}
 %bp{
 	border-left: hidden;
 	border-right: hidden;
@@ -18,12 +30,11 @@ $c_1: #2e3629;
 	height: 20px;
 
 }
-
-.bodybody {
-	background: url(../img/bodybody.jpg)0px 0px /100% 100% no-repeat;
-	height: 100%;
-	width: 100%;
-
+%bks {
+	background-size: contain;
+}
+%pa {
+	position: absolute;
 }
 
 .upbar {
@@ -40,9 +51,6 @@ $c_1: #2e3629;
 		margin: 5px 0px 10px 520px;
 		@extend %border;
 		padding: 0px 10px 0px 10px;
-
-
-		
 	}
 	.states {
 		margin: 5px 0px 10px 20px;
@@ -57,32 +65,193 @@ $c_1: #2e3629;
 		@extend %border;
 	}
 }
-
-
-.bottombar {
+body {
+	background: #e8ffd6;
+}
+h1 {
+	font-size: 30px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	margin: 40px 0px 10px 640px;
+	font-style: italic;
 	
-	border: 5px solid #46573a;
-	@extend %bp;
-	%pd {
-		padding: 0px 10px 0px 10px;
-		margin: 0px 0px 0px 400px;
-	}
-	background: #4d8f54;
-	height: 20px;
-	padding: 10px 0px 30px 0px;
-	
-;
-	& a {
-		@extend %pd;
-		color: #3a4731;
-		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+.bodybody {
+	border: 4px solid $c_3;
+	width: 49%;
+	height: 3500px;
+	margin: 0px 0px 0px 460px;
+	background: $c_4;
+	.wg {
+		display: inline-block;
 		font-size: 20px;
+		padding: 0px 20px 0px 10px;
+		margin: 10px 5px 10px 10px;
+		border: 4px solid #000;
+		background: url(../img/1.jpg)no-repeat;
+		background-size: 300px 400px;
+		width: 300px;
+		height: 400px;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
+	}
+	a {
+		color: #000;
+	}
+	.chatk {
+		display: inline-block;
+		@extend %standbord;
+		background: url(../img/2.jpg) no-repeat;
+		background-size: 600px 300px;
+		height: 300px;
+		width: 600px;
+		position: absolute;
+		bottom: 511px;
+		font-size: 20px;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	}
+	.imper {
+	 @extend %standbord;
+	 font-size: 50px;
+	 text-align: left;
+	 background: url(../img/3.jpg)no-repeat;
+	 position: absolute;
+	 top: 464px;
+	 height: 800px;
+	 width: 600px;
+	 padding: 25px 0px 0px 25px;
+	 background-size: 100% 100%;
+	 color: #000;
+	}
+	.Oda {
+		@extend %standbord;
+		position: absolute;
+		top: 563px;
+		right: 1129px;
+		width: 300px;
+		background: url(../img/4.jpg)no-repeat;
+		height: 520px;
+		font-size: 30px;
+		padding: 0px 80px 0px 0px;
+		color: #fff;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	}
+	.Tak {
+		@extend %standbord;
+		width: 301px;
+		position: absolute;
+		top: 1087px;
+		left: 474px;
+		background: url(../img/5.jpg)no-repeat;
+		height: 300px;
+		padding: 230px 0px 0px 0px;
+		font-size: 30px;
+		color: #fff;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	}
+	.Yes{
+		@extend %standbord;
+		position: absolute;
+		top: 1268px;
+		width: 600px;
+		height: 350px;
+		background: url(../img/6.jpg)no-repeat;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		color: #fff;
+		font-size: 25px;
+
+	}
+	.mm {
+		@extend %standbord;
+		position: absolute;
+		top: 1395px;
+		left: 474px;
+		width: 220px;
+		height: 223px;
+		padding: 0px 0px 0px 0px;
+		font-size: 25px;
+		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+		background: url(../img/7.jpg)no-repeat;
+		background-size: contain;
+
+	}
+	.rm {
+		@extend %standbord;
+		position: absolute;
+		top: 1623px;
+		left: 474px;
+		background: url(../img/8.jpg)no-repeat;
+		width: 601px;
+		height: 601px;
+		background-size: cover;
+		font-size: 50px;
+		color: #f2d494
+;
+	}
+	.msmb {
+		@extend %standbord;
+		@extend %pa;
+		top: 1623px;
+		right: 522px;
+		width: 301px;
+		height: 601px;
+		background: url(../img/9.jpg)no-repeat;
+		@extend %bks;
+		font-size: 30px;
+		background-position: -60px -5px;
+		padding: 0px 150px 0px 0px;
+		line-height: 25px;
+	}
+	.ths {
+		@extend %standbord;
+		@extend %pa;
+		top: 2228px;
+		right: 522px;
+		width: 31%;
+		height: 500px;
+		background: url(../img/10.jpg) no-repeat;
+		background-size: cover;
+		background-position: -30px 0px;
+		color: #cfb53b;
+		font-family: "Arial Black", Gadget, sans-serif;
+		font-size: 19px;
+		text-align: center;
+	}
+	.sv {
+		@extend %standbord;
+		@extend %pa;
+		top: 2228px;
+		left: 474px;
+		width: 310px;
+		height: 500px;
 	}
 
 }
-
 %bp{
 	border-left: hidden;
 	border-right: hidden;
+}
+
+.bottombar {
+	border: 5px solid #2e3629;
+	border-right: $h;
+	border-left: $h;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 25px;
+	padding: 0px 0px 0px 480px;
+	@include bottom(50px 0px 0px 0px)
+	background: #aae080;
+	& a {
+		border: 2px solid #2e3629;
+		margin: 5px 0px 5px 0px;
+		color:$c_2;
+	}
+	.luk {
+		padding: 0px 50px 0px 50px;
+		border-right: $h;
+		
+	}
+	.credits {
+		padding: 0px 50px 0px 50px;
+	}
+
 }
