--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
   font-weight: 400; }
 
-.upbar, .bottombar {
+.bodybody .chatk, .bodybody .imper, .bodybody .Oda, .bodybody .Tak, .bodybody .Yes, .bodybody .mm, .bodybody .rm, .bodybody .msmb, .bodybody .ths, .bodybody .sv {
+  border: 4px solid #000; }
+
+.upbar {
   border-left: hidden;
   border-right: hidden; }
 
@@ -68,10 +71,11 @@ h1, h2, h3, h4, h5, h6 {
   background: #4d8f54;
   height: 20px; }
 
-.bodybody {
-  background: url(../img/bodybody.jpg) 0px 0px/100% 100% no-repeat;
-  height: 100%;
-  width: 100%; }
+.bodybody .msmb {
+  background-size: contain; }
+
+.bodybody .msmb, .bodybody .ths, .bodybody .sv {
+  position: absolute; }
 
 .upbar {
   border: 4px solid #46573a;
@@ -91,19 +95,154 @@ h1, h2, h3, h4, h5, h6 {
   .upbar .aboutus {
     margin: 5px 0px 10px 20px; }
 
-.bottombar {
-  border: 5px solid #46573a;
-  background: #4d8f54;
-  height: 20px;
-  padding: 10px 0px 30px 0px; }
-  .bottombar a {
-    padding: 0px 10px 0px 10px;
-    margin: 0px 0px 0px 400px; }
-  .bottombar a {
-    color: #3a4731;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 20px; }
+body {
+  background: #e8ffd6; }
 
-.upbar, .bottombar {
+h1 {
+  font-size: 30px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin: 40px 0px 10px 640px;
+  font-style: italic; }
+
+.bodybody {
+  border: 4px solid #6E6702;
+  width: 49%;
+  height: 3500px;
+  margin: 0px 0px 0px 460px;
+  background: #C05805; }
+  .bodybody .wg {
+    display: inline-block;
+    font-size: 20px;
+    padding: 0px 20px 0px 10px;
+    margin: 10px 5px 10px 10px;
+    border: 4px solid #000;
+    background: url(../img/1.jpg) no-repeat;
+    background-size: 300px 400px;
+    width: 300px;
+    height: 400px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  .bodybody a {
+    color: #000; }
+  .bodybody .chatk {
+    display: inline-block;
+    background: url(../img/2.jpg) no-repeat;
+    background-size: 600px 300px;
+    height: 300px;
+    width: 600px;
+    position: absolute;
+    bottom: 511px;
+    font-size: 20px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  .bodybody .imper {
+    font-size: 50px;
+    text-align: left;
+    background: url(../img/3.jpg) no-repeat;
+    position: absolute;
+    top: 464px;
+    height: 800px;
+    width: 600px;
+    padding: 25px 0px 0px 25px;
+    background-size: 100% 100%;
+    color: #000; }
+  .bodybody .Oda {
+    position: absolute;
+    top: 563px;
+    right: 1129px;
+    width: 300px;
+    background: url(../img/4.jpg) no-repeat;
+    height: 520px;
+    font-size: 30px;
+    padding: 0px 80px 0px 0px;
+    color: #fff;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  .bodybody .Tak {
+    width: 301px;
+    position: absolute;
+    top: 1087px;
+    left: 474px;
+    background: url(../img/5.jpg) no-repeat;
+    height: 300px;
+    padding: 230px 0px 0px 0px;
+    font-size: 30px;
+    color: #fff;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  .bodybody .Yes {
+    position: absolute;
+    top: 1268px;
+    width: 600px;
+    height: 350px;
+    background: url(../img/6.jpg) no-repeat;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff;
+    font-size: 25px; }
+  .bodybody .mm {
+    position: absolute;
+    top: 1395px;
+    left: 474px;
+    width: 220px;
+    height: 223px;
+    padding: 0px 0px 0px 0px;
+    font-size: 25px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background: url(../img/7.jpg) no-repeat;
+    background-size: contain; }
+  .bodybody .rm {
+    position: absolute;
+    top: 1623px;
+    left: 474px;
+    background: url(../img/8.jpg) no-repeat;
+    width: 601px;
+    height: 601px;
+    background-size: cover;
+    font-size: 50px;
+    color: #f2d494; }
+  .bodybody .msmb {
+    top: 1623px;
+    right: 522px;
+    width: 301px;
+    height: 601px;
+    background: url(../img/9.jpg) no-repeat;
+    font-size: 30px;
+    background-position: -60px -5px;
+    padding: 0px 150px 0px 0px;
+    line-height: 25px; }
+  .bodybody .ths {
+    top: 2228px;
+    right: 522px;
+    width: 31%;
+    height: 500px;
+    background: url(../img/10.jpg) no-repeat;
+    background-size: cover;
+    background-position: -30px 0px;
+    color: #cfb53b;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 19px;
+    text-align: center; }
+  .bodybody .sv {
+    top: 2228px;
+    left: 474px;
+    width: 310px;
+    height: 500px; }
+
+.upbar {
   border-left: hidden;
   border-right: hidden; }
+
+.bottombar {
+  border: 5px solid #2e3629;
+  border-right: hidden;
+  border-left: hidden;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 25px;
+  padding: 0px 0px 0px 480px;
+  margin: 860px 0px 0px 0px;
+  background: #aae080; }
+  .bottombar a {
+    border: 2px solid #2e3629;
+    margin: 5px 0px 5px 0px;
+    color: #2E2300; }
+  .bottombar .luk {
+    padding: 0px 50px 0px 50px;
+    border-right: hidden; }
+  .bottombar .credits {
+    padding: 0px 50px 0px 50px; }
