--- a/#Source/scss/style.scss
+++ b/#Source/scss/style.scss
@@ -75,6 +75,12 @@ h1 {
 	font-style: italic;
 	
 }
+h2 {
+	font-size: 25px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	
+
+}
 .bodybody {
 	border: 4px solid $c_3;
 	width: 49%;
