--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ h1 {
   margin: 40px 0px 10px 640px;
   font-style: italic; }
 
+h2 {
+  font-size: 25px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+
 .bodybody {
   border: 4px solid #6E6702;
   width: 49%;
