--- a/style2.css
+++ b/style2.css
@@ -104,7 +104,7 @@ h1 {
   margin: 40px 0px 10px 640px;
   font-style: italic; }
 
-h2 {
+h2 .mark {
   font-size: 25px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   margin: 0px 0px 0px 500px; }
