--- a/ShimazuSite/Статьи/Поиск_Статей/#Source/scss/style.scss
+++ b/ShimazuSite/Статьи/Поиск_Статей/#Source/scss/style.scss
@@ -75,6 +75,13 @@ h1 {
 	font-style: italic;
 	
 }
+h2 {
+	.mark {
+	font-size: 25px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	margin: 0px 0px 0px 500px;
+}
+}
 .bodybody {
 	border: 4px solid $c_3;
 	width: 49%;
