--- a/#Source/scss/style.scss
+++ b/#Source/scss/style.scss
@@ -77,8 +77,9 @@ h1 {
 }
 h2 {
 	font-size: 25px;
+	margin: 0px 0px 0px 660px;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	
+	font-style: italic;
 
 }
 .bodybody {
@@ -111,7 +112,7 @@ h2 {
 		height: 300px;
 		width: 600px;
 		position: absolute;
-		bottom: 511px;
+		bottom: 486px;
 		font-size: 20px;
 		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	}
@@ -121,7 +122,7 @@ h2 {
 	 text-align: left;
 	 background: url(../img/3.jpg)no-repeat;
 	 position: absolute;
-	 top: 464px;
+	 top: 490px;
 	 height: 800px;
 	 width: 600px;
 	 padding: 25px 0px 0px 25px;
@@ -131,7 +132,7 @@ h2 {
 	.Oda {
 		@extend %standbord;
 		position: absolute;
-		top: 563px;
+		top: 589px;
 		right: 1129px;
 		width: 300px;
 		background: url(../img/4.jpg)no-repeat;
@@ -145,7 +146,7 @@ h2 {
 		@extend %standbord;
 		width: 301px;
 		position: absolute;
-		top: 1087px;
+		top: 1115px;
 		left: 474px;
 		background: url(../img/5.jpg)no-repeat;
 		height: 300px;
@@ -157,7 +158,7 @@ h2 {
 	.Yes{
 		@extend %standbord;
 		position: absolute;
-		top: 1268px;
+		top: 1295px;
 		width: 600px;
 		height: 350px;
 		background: url(../img/6.jpg)no-repeat;
@@ -169,10 +170,10 @@ h2 {
 	.mm {
 		@extend %standbord;
 		position: absolute;
-		top: 1395px;
+		top: 1433px;
 		left: 474px;
-		width: 220px;
-		height: 223px;
+		width: 190px;
+		height: 193px;
 		padding: 0px 0px 0px 0px;
 		font-size: 25px;
 		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -183,7 +184,7 @@ h2 {
 	.rm {
 		@extend %standbord;
 		position: absolute;
-		top: 1623px;
+		top: 1652px;
 		left: 474px;
 		background: url(../img/8.jpg)no-repeat;
 		width: 601px;
@@ -196,7 +197,7 @@ h2 {
 	.msmb {
 		@extend %standbord;
 		@extend %pa;
-		top: 1623px;
+		top: 1652px;
 		right: 522px;
 		width: 301px;
 		height: 601px;
@@ -210,7 +211,7 @@ h2 {
 	.ths {
 		@extend %standbord;
 		@extend %pa;
-		top: 2228px;
+		top: 2258px;
 		right: 522px;
 		width: 31%;
 		height: 500px;
@@ -225,7 +226,7 @@ h2 {
 	.sv {
 		@extend %standbord;
 		@extend %pa;
-		top: 2228px;
+		top: 2258px;
 		left: 474px;
 		width: 310px;
 		height: 500px;
