--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,9 @@ h1 {
 
 h2 {
   font-size: 25px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+  margin: 0px 0px 0px 660px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-style: italic; }
 
 .bodybody {
   border: 4px solid #6E6702;
@@ -134,7 +136,7 @@ h2 {
     height: 300px;
     width: 600px;
     position: absolute;
-    bottom: 511px;
+    bottom: 486px;
     font-size: 20px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
   .bodybody .imper {
@@ -142,7 +144,7 @@ h2 {
     text-align: left;
     background: url(../img/3.jpg) no-repeat;
     position: absolute;
-    top: 464px;
+    top: 490px;
     height: 800px;
     width: 600px;
     padding: 25px 0px 0px 25px;
@@ -150,7 +152,7 @@ h2 {
     color: #000; }
   .bodybody .Oda {
     position: absolute;
-    top: 563px;
+    top: 589px;
     right: 1129px;
     width: 300px;
     background: url(../img/4.jpg) no-repeat;
@@ -162,7 +164,7 @@ h2 {
   .bodybody .Tak {
     width: 301px;
     position: absolute;
-    top: 1087px;
+    top: 1115px;
     left: 474px;
     background: url(../img/5.jpg) no-repeat;
     height: 300px;
@@ -172,7 +174,7 @@ h2 {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
   .bodybody .Yes {
     position: absolute;
-    top: 1268px;
+    top: 1295px;
     width: 600px;
     height: 350px;
     background: url(../img/6.jpg) no-repeat;
@@ -181,10 +183,10 @@ h2 {
     font-size: 25px; }
   .bodybody .mm {
     position: absolute;
-    top: 1395px;
+    top: 1433px;
     left: 474px;
-    width: 220px;
-    height: 223px;
+    width: 190px;
+    height: 193px;
     padding: 0px 0px 0px 0px;
     font-size: 25px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -192,7 +194,7 @@ h2 {
     background-size: contain; }
   .bodybody .rm {
     position: absolute;
-    top: 1623px;
+    top: 1652px;
     left: 474px;
     background: url(../img/8.jpg) no-repeat;
     width: 601px;
@@ -201,7 +203,7 @@ h2 {
     font-size: 50px;
     color: #f2d494; }
   .bodybody .msmb {
-    top: 1623px;
+    top: 1652px;
     right: 522px;
     width: 301px;
     height: 601px;
@@ -211,7 +213,7 @@ h2 {
     padding: 0px 150px 0px 0px;
     line-height: 25px; }
   .bodybody .ths {
-    top: 2228px;
+    top: 2258px;
     right: 522px;
     width: 31%;
     height: 500px;
@@ -223,7 +225,7 @@ h2 {
     font-size: 19px;
     text-align: center; }
   .bodybody .sv {
-    top: 2228px;
+    top: 2258px;
     left: 474px;
     width: 310px;
     height: 500px; }
