--- a/css/style2.css
+++ b/css/style2.css
@@ -99,14 +99,15 @@ body {
   background: #e8ffd6; }
 
 h1 {
-  font-size: 40px;
+  font-size: 30px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   margin: 40px 0px 10px 640px;
   font-style: italic; }
 
-h2 {
-  font-size: 30px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
+h2 .mark {
+  font-size: 25px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin: 0px 0px 0px 550px; }
 
 .bodybody {
   border: 4px solid #6E6702;
